# moss.c

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeInfo.txt  CMakeLists.txt  CMakeOptions.txt  Doxyfile  LICENSE  README.md
example/: CMakeLists.txt  main.c
include/moss/: apidef.h  engine.h  vertex.h  window_config.h
src/: crate.c  engine.c  main.c
src/internal/: crate.h  log.h  memory_utils.h  shaders.c  shaders.h  vertex.h  vk_buffer_utils.h  vk_command_pool_utils.h  vk_instance_utils.h  vk_physical_device_utils.h  vk_shader_utils.h  vk_swap_chain_utils.h  vk_swapchain_utils.h
tests/: CMakeLists.txt  README.md
